; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_node-rev.c_svn_fs_base__create_node.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_node-rev.c_svn_fs_base__create_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i64 }

@SVN_FS_BASE__MIN_NODE_ORIGINS_FORMAT = common dso_local global i64 0, align 8
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_base__create_node(i32** %0, %struct.TYPE_7__* %1, i32* %2, i8* %3, i8* %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32**, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_8__*, align 8
  store i32** %0, i32*** %8, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %9, align 8
  store i32* %2, i32** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8* %4, i8** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %18, align 8
  store %struct.TYPE_8__* %19, %struct.TYPE_8__** %16, align 8
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = load i8*, i8** %12, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = load i32*, i32** %14, align 8
  %25 = call i32 @svn_fs_bdb__new_node_id(i32** %15, %struct.TYPE_7__* %20, i8* %21, i8* %22, i32* %23, i32* %24)
  %26 = call i32 @SVN_ERR(i32 %25)
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %28 = load i32*, i32** %15, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = load i32*, i32** %13, align 8
  %31 = load i32*, i32** %14, align 8
  %32 = call i32 @svn_fs_bdb__put_node_revision(%struct.TYPE_7__* %27, i32* %28, i32* %29, i32* %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @SVN_FS_BASE__MIN_NODE_ORIGINS_FORMAT, align 8
  %38 = icmp sge i64 %36, %37
  br i1 %38, label %39, label %48

39:                                               ; preds = %7
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %41 = load i32*, i32** %15, align 8
  %42 = call i32 @svn_fs_base__id_node_id(i32* %41)
  %43 = load i32*, i32** %15, align 8
  %44 = load i32*, i32** %13, align 8
  %45 = load i32*, i32** %14, align 8
  %46 = call i32 @svn_fs_bdb__set_node_origin(%struct.TYPE_7__* %40, i32 %42, i32* %43, i32* %44, i32* %45)
  %47 = call i32 @SVN_ERR(i32 %46)
  br label %48

48:                                               ; preds = %39, %7
  %49 = load i32*, i32** %15, align 8
  %50 = load i32**, i32*** %8, align 8
  store i32* %49, i32** %50, align 8
  %51 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %51
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_fs_bdb__new_node_id(i32**, %struct.TYPE_7__*, i8*, i8*, i32*, i32*) #1

declare dso_local i32 @svn_fs_bdb__put_node_revision(%struct.TYPE_7__*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @svn_fs_bdb__set_node_origin(%struct.TYPE_7__*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @svn_fs_base__id_node_id(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
